[prepare-major] update to major version 7.0-SNAPSHOT (#242)
* [prepare-major] update to major version 7.0-SNAPSHOT

* fix babel-maven-plugin

* [prepare-major] update to major version 7.0-SNAPSHOT

* add scheduler

* fix border color

* unify request value resolution

* fix unit tests